add teacher pages

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <a routerLink="/categories" routerLinkActive="active">Категории</a>
       </li>
       <li *ngIf="auth.userRole === 'Teacher'">
-        <a routerLink="/courses/manage" routerLinkActive="active"
+        <a routerLink="/teacher/courses" routerLinkActive="active"
           >Моите курсове</a
         >
       </li>
